--- a/index.html
+++ b/index.html
@@ -4,111 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/m-styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <title>my hobby page</title>
+    <title>Document</title>
   </head>
-
   <body>
-    <h1>Qahwa | Arabic Coffee</h1>
-
-    <div class="block">
-      <p>
-        Coffee is my passion and hobby. Let me tell you about my favourite one -
-        qahwa.
-      </p>
-
-      <p>
-        Qahwa (also known as kahwa or Arabic coffee) is a traditional method of
-        preparing coffee in the Middle East – with each country generally having
-        its own unique recipe.
-      </p>
-
-      <p>
-        Qahwa is made from green coffee beans and cardamom. It is often served
-        with dates. It is served from a special coffee pot called dallah and the
-        cups are small with no handle. It is also offered at most social events
-        like weddings or parties. Qahwa is popularly consumed after breaking the
-        fast (Iftar) during Ramadan.
-      </p>
-
-      <img
-        src="https://www.archanaskitchen.com/images/archanaskitchen/1-Author/Roop/Qahwa.jpg"
-        alt="Picture of Qahwa"
-        width="350"
-        height="300"
-      />
-    </div>
-    <div class="block">
-      <h2>Qahwa ingridients</h2>
-      <p>Total time: 30 minutes</p>
-      <p>Number of servings: 4</p>
-      <ul>
-        <li>
-          1 tablespoon Green Coffee beans, lightly roasted and coarsely ground
-        </li>
-        <li>1 tablespoon Cardamom</li>
-        <li>(Elaichi) Pods/Seeds, crushed</li>
-        <li>2.5 cups Water</li>
-        <li>1/8 teaspoon Saffron strands</li>
-        <li>1 teaspoon Rose water</li>
-      </ul>
-
-      <img
-        src="https://www.nescafe.com/gb/sites/default/files/arabica-coffee-beans-thumbnail-desktop.jpg"
-        alt="Arabic coffee beans"
-        width="350"
-        height="300"
-      />
-    </div>
-    <div class="block">
-      <h2>How to make Qahwa</h2>
-      <ol>
-        <li>
-          Bring water to boil in a saucepan. When it boils, add ground coffee.
-        </li>
-        <li>
-          After 10 minutes of boiling, add cloves, crushed cardamom and stir
-          once and boil for another 4 to 5 minutes.
-        </li>
-        <li>
-          Now switch off the flame, cover and let coffee grounds settle at the
-          bottom for a minute. Do not stir at this time since the liquid needs
-          to settle.
-        </li>
-        <li>Now add the rose water and saffron if you are using them.</li>
-        <li>Strain and pour the steaming coffee into the flask or teapot.</li>
-        <li>
-          Now qahwa is ready to be served. Serve with dates during evenings and
-          enjoy!
-        </li>
-      </ol>
-
-      <img
-        src="https://m.media-amazon.com/images/I/71cjtmKKnVL._AC_SX466_.jpg"
-        alt="Picture of served qahwa"
-        width="350"
-        height="300"
-      />
-    </div>
-
-    <footer class="block">
-      <p>
-        <a
-          href="https://lifeinsaudiarabia.net/10-advantages-of-drinking-arabic-qahwa/"
-          >Here</a
-        >
-        you can find more information about drinking qahwa.
-      </p>
-      <p>
-        Today
-        <script src="/my-script.js"></script>
-      </p>
-    </footer>
+    <a href="hobby-page.html">Hobby page</a>
   </body>
 </html>
